k8s/auth-svc-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-bridge
spec:
  type: ExternalName
  externalName: auth-svc.auth
