k8s/message-svc-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-bridge
spec:
  type: ExternalName
  externalName: message-svc.message
