k8s/user-svc-bridge.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-bridge
spec:
  type: ExternalName
  externalName: user-svc.user
